src/sdca.css
/* Resets from gov.uk style */
body.full-width .govuk-width-container {max-width: 100vw;}
body.full-width .govuk-grid-row {margin-left: 0; margin-right: 0;}
body.full-width .govuk-footer__meta {margin-left: 0; margin-right: 0;}

@media (min-width: 48.0625em) {
    .govuk-header__logo {width: 60%}
    .govuk-header__content {width: 40%;}
}

@media (min-width: 40.0625em) {
    .govuk-footer {padding-top: 25px;}
}

@media (min-width: 50.0625em) {
    .govuk-grid-column-two-thirds {width: 50%;}
    .govuk-grid-column-one-third {width: 50%;}
}

.govuk-panel {padding: 20px}
.govuk-panel__title {font-size: 1.5rem}
.govuk-panel__body {font-size: 1rem;}
#details.govuk-tabs__panel > div {overflow-x: auto;}

/* gov.uk addons */
.govuk-summary-list__row.active {background-color: #ECECEC;}

/* Map and map controls*/
#map {width: 100%; min-height: 700px; height: calc(100vh - 260px); position: relative;}
#map button.filter-button {position: absolute; top: 0; right: 0; margin: 10px 20px; z-index: 1;}
#geocoder input {width: 280px; border: 2px solid #0b0c0c; box-shadow: none;}
.ui-autocomplete-loading {background: white url("/images/ui-anim_basic_16x16.gif") right center no-repeat;}

/* Popups (adjustments to emulate Leaflet.js); see: https://github.com/mapbox/mapbox-gl-js/issues/8368 */
@keyframes fadein {from {opacity: 0;} to {opacity: 1;}}
.mapboxgl-popup {animation: fadein 0.2s;}
.mapboxgl-popup-content {max-width: 300px; min-width: 50px; border-radius: 2px !important; padding: 13px 19px; box-shadow: 0 3px 14px rgba(0,0,0,0.4); min-width: 300px;}
.mapboxgl-popup-close-button {font-size: 16px; font-family: Tahoma, Verdana, sans-serif; color: #c3c3c3; font-weight: bold;}
.mapboxgl-popup-close-button:hover {color: #999; background-color: white; border-top-right-radius: 12px;}
body .mapboxgl-map {line-height: 1.4;}

.mapboxgl-popup .govuk-summary-list__key {width: auto;}

#styleswitcher {font-size: 20px; font-family: Helvetica, Arial, sans-serif; padding: 0 15px 0 0; border:  2px solid #0b0c0c;}
#styleswitcher ul li input {transform: scale(2); margin: 0 15px 5px 10px;}

#sdca-panel-container {min-height: 700px; height: calc(100vh - 260px); overflow-y: scroll;}

/* Panels initial state */
#data-layers.sdca-panel {display: none;}
#view-results.sdca-panel {display: none;}

/* Layers */
.layertemplate {display: none;}

/* Loading spinner - see: https://github.com/alphagov/govuk-design-system-backlog/issues/28 and commit dated 13 Feb 2020 */
.loading-spinner {display: none; border: 4px solid #fff; border-radius: 50%; border-top-color: gray; width: 8px; height: 8px; -webkit-animation: spin 2s linear infinite; animation: spin 2s linear infinite; margin: 0;}
@-webkit-keyframes spin { 0% {-webkit-transform: rotate(0deg);} 100% {-webkit-transform: rotate(360deg);} }
@keyframes spin { 0% {transform: rotate(0deg);} 100% {transform: rotate(360deg);} }

/* Results */
.govuk-panel--confirmation.failure {background-color: DarkRed;}

/* Drawing */
#drawing {height: 130px; bottom: 25px; right: 20px;}
body #application nav #drawing a {border-bottom: 0;}
#calculate, .edit-clear, .edit-draw {display: none;}
.drawing-complete {display: none;}
.stop-drawing {display: none;}

/* Autocomplete */
.ui-autocomplete li a {color: #0B0D0D; font-family: Helvetica, Arial, sans-serif;}
#geocoder input {color: #0B0D0D; font-size: 1.4em;}

/* Layer-specific popup styling */
#map .mapboxgl-popup.trafficcounts .mapboxgl-popup-content {min-width: 420px; max-width: 420px;}
#map .mapboxgl-popup.trafficcounts table td, #map .mapboxgl-popup.trafficcounts table th {font-size: 0.83em;}
#map .mapboxgl-popup.trafficcounts table th {text-align: left; line-height: 2em;}
#map .mapboxgl-popup.trafficcounts table td {text-align: right;}

/* Warning style */
.warning {color: #fe6f5e;}

